<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#337CB4"
    android:backgroundTint="#B2D0E7"
    android:foregroundTint="#00FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="Registrate"
        android:textColor="#3F51B5"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_id" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Es gratis (y lo seguira siendo)"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/Nombre_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="270dp"
        android:text="@string/Nombre"
        android:textColor="#3F51B5"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/Apellidos_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Apellidos"
        android:textColor="#3F51B5"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/Nombre_id"
        app:layout_constraintTop_toBottomOf="@+id/Nombre_id" />

    <TextView
        android:id="@+id/Email_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Email"
        android:textAlignment="viewEnd"
        android:textColor="#3F51B5"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/Apellidos_id"
        app:layout_constraintTop_toBottomOf="@+id/Apellidos_id" />

    <TextView
        android:id="@+id/Contraseña_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Contraseña"
        android:textAlignment="viewEnd"
        android:textColor="#3F51B5"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/Email_id"
        app:layout_constraintTop_toBottomOf="@+id/Email_id" />

    <TextView
        android:id="@+id/Sexo_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Sexo"
        android:textColor="#3F51B5"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/Contraseña_id"
        app:layout_constraintTop_toBottomOf="@+id/Contraseña_id" />

    <TextView
        android:id="@+id/FechaNac_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/FechaNacimiento"
        android:textAlignment="viewEnd"
        android:textColor="#3F51B5"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/Sexo_id"
        app:layout_constraintTop_toBottomOf="@+id/Sexo_id" />

    <TextView
        android:id="@+id/Pregunta_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/Info"
        android:textColor="#3F51B5"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/FN_id"
        app:layout_constraintTop_toBottomOf="@+id/FechaNac_id" />

    <Button
        android:id="@+id/Registrate_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#4CAF50"
        android:backgroundTint="#4CAF50"
        android:backgroundTintMode="src_over"
        android:drawableLeft="@drawable/agregar_usuario"
        android:drawableTint="#4CAF50"
        android:foregroundTint="#4CAF50"
        android:hapticFeedbackEnabled="true"
        android:text="Registrate"
        app:iconTint="#4CAF50"
        app:layout_constraintStart_toStartOf="@+id/Pregunta_id"
        app:layout_constraintTop_toBottomOf="@+id/Pregunta_id"
        app:rippleColor="#4CAF50"
        app:strokeColor="#4CAF50" />

    <TextView
        android:id="@+id/Texto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/Texto1"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Texto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/Texto2"
        app:layout_constraintBottom_toBottomOf="@+id/Texto1"
        app:layout_constraintStart_toEndOf="@+id/Texto1"
        app:layout_constraintTop_toTopOf="@+id/Texto1" />

    <EditText
        android:id="@+id/N_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/Nombre_id"
        app:layout_constraintStart_toEndOf="@+id/Nombre_id"
        app:layout_constraintTop_toTopOf="@+id/Nombre_id" />

    <EditText
        android:id="@+id/A_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/Apellidos_id"
        app:layout_constraintStart_toEndOf="@+id/Apellidos_id"
        app:layout_constraintTop_toTopOf="@+id/Apellidos_id" />

    <EditText
        android:id="@+id/E_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/Email_id"
        app:layout_constraintStart_toEndOf="@+id/Email_id"
        app:layout_constraintTop_toTopOf="@+id/Email_id" />

    <EditText
        android:id="@+id/C_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/Contraseña_id"
        app:layout_constraintStart_toEndOf="@+id/Contraseña_id"
        app:layout_constraintTop_toTopOf="@+id/Contraseña_id" />

    <EditText
        android:id="@+id/S_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/Sexo_id"
        app:layout_constraintStart_toEndOf="@+id/Sexo_id"
        app:layout_constraintTop_toTopOf="@+id/Sexo_id" />

    <EditText
        android:id="@+id/FN_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="date"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/FechaNac_id"
        app:layout_constraintStart_toEndOf="@+id/FechaNac_id"
        app:layout_constraintTop_toTopOf="@+id/FechaNac_id" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_id"
        android:layout_width="413dp"
        android:layout_height="109dp"
        android:background="#1C3BEF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="45dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/OlviContr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="72dp"
            android:text="@string/Olv_Contr"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/NC_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="56dp"
            android:buttonTint="#F2FFFFFF"
            android:text="@string/NoC"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Entrar_id"
            android:layout_width="116dp"
            android:layout_height="36dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="4dp"
            android:background="#2196F3"
            android:backgroundTint="#2196F3"
            android:backgroundTintMode="add"
            android:hapticFeedbackEnabled="false"
            android:text="Entrar"
            app:icon="@drawable/facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="45dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/login_id"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Contraseña_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="15dp"
        android:text="@string/Contraseña_id"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Correo_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/Correo_id_login"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_id" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/Texto2"
        tools:layout_editor_absoluteX="1dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:backgroundTint="#6B6969"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/Registrate_id"
        tools:layout_editor_absoluteX="-7dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/N_id"
        app:layout_constraintStart_toEndOf="@+id/N_id"
        app:layout_constraintTop_toTopOf="@+id/N_id"
        app:srcCompat="@drawable/usuario__1_" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/FN_id"
        app:layout_constraintStart_toEndOf="@+id/FN_id"
        app:layout_constraintTop_toTopOf="@+id/FN_id"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/calendario" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/A_id"
        app:layout_constraintStart_toEndOf="@+id/A_id"
        app:layout_constraintTop_toTopOf="@+id/A_id"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/usuario_2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/E_id"
        app:layout_constraintStart_toEndOf="@+id/E_id"
        app:layout_constraintTop_toTopOf="@+id/E_id"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/sobre" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/C_id"
        app:layout_constraintStart_toEndOf="@+id/C_id"
        app:layout_constraintTop_toTopOf="@+id/C_id"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ajustes" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/S_id"
        app:layout_constraintStart_toEndOf="@+id/S_id"
        app:layout_constraintTop_toTopOf="@+id/S_id"
        app:srcCompat="@drawable/corazon" />

</androidx.constraintlayout.widget.ConstraintLayout>